Closed
Bug 393766
Opened 18 years ago
Closed 27 days ago
incorrect letter-spacing on capitalized german letter "ß"
Categories
(Core :: Layout: Text and Fonts, defect)
Core
Layout: Text and Fonts
Tracking
()
RESOLVED
FIXED
154 Branch
People
(Reporter: crazy-daniel, Assigned: jfkthame)
References
Details
(Keywords: regression, testcase)
Attachments
(2 files)
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; de; rv:1.8.1.6) Gecko/20070725 Firefox/2.0.0.6
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a6pre) Gecko/20070621 Minefield/3.0a6pre ID:2007062107
The german letter "ß" (the SZ [Eszett, sharp S]) is capitalized to "SS".
Before nsTextFrameThebes was turned on letter-spacing applied to both S. Afterwards, letter-spacing only applied to the second S.
See:
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a6pre) Gecko/20070620 Minefield/3.0a6pre ID:2007062004
WFM ("xßy" becomes "X S S Y"),
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a6pre) Gecko/20070621 Minefield/3.0a6pre ID:2007062107
Broken ("xßy" becomes "X SS Y").
Reproducible: Always
Keywords: regression
Version: unspecified → Trunk
Updated•18 years ago
|
Attachment #278307 -
Attachment mime type: text/html → text/html;charset=ISO-8859-1
Comment 2•18 years ago
|
||
Confirmed on Mac trunk.
Btw, the testcase uses "font-variant: small-caps;", which does more than just capitalize. "text-transform: uppercase;", which just capitalizes, does show the same bug.
Fixing this would be nontrivial. I'm going to put it on the back burner.
Updated•18 years ago
|
Flags: wanted1.9.0.x?
Flags: wanted1.9.1?
Flags: wanted1.9.1-
Flags: blocking1.9.1-
Comment 4•17 years ago
|
||
(In reply to comment #3)
> Fixing this would be nontrivial. I'm going to put it on the back burner.
Not wanted for 1.9.0.x for the same reason.
Flags: wanted1.9.0.x? → wanted1.9.0.x-
I need to figure out what the heck to do here.
| Assignee | ||
Comment 6•17 years ago
|
||
Actually, this raises another issue, which is whether "font-variant: small-caps;" should actually be uppercasing the es-zet at all. I notice that Safari leaves it as the single ß glyph. On the other hand, there are also instances of fonts that have small-cap glyphs, and include a specific small-cap "SS" glyph for this purpose. (People using such fonts are unlikely to get proper letterspacing either, btw!)
It would be interesting to go back and review some of the discussion from around the time U+1E9E LATIN CAPITAL LETTER SHARP S was accepted in Unicode; a starting point could be http://typophile.com/node/33647.
None of this gets us "off the hook" as far as this bug is concerned, though, as capitalizing ß to SS is certainly not going away. Even if we have a font that supports U+1E9E, we'd still need to capitalize as SS by default, as that's the most commonly-accepted practice at least for "text-transform:uppercase".
In the release candidate for Internet Explorer 8, ß is also capitalized to SS. I think that is the best because that really is the most common case in germany.
Flags: wanted1.9.2?
Flags: wanted1.9.2-
Flags: blocking1.9.2-
(In reply to comment #7)
> In the release candidate for Internet Explorer 8, ß is also capitalized to SS.
Can't confirm with the final version of my IE8, the ß stays being an ß.
interestingly enough, IE9 PP8 capitalises it into U+1E9E (ẞ) on my machine (when rendering in IE9 mode).
I am not sure whether this would also be the case on Vista since the capital ß didn't become part of Unicode until after Vista's release and therefore might not be available in any of the default fonts.
Correction: The rendering in IE8 is the same as in IE9 when in standards mode (and not quirks mode in which the test case is rendered because of it having no doctype).
| Reporter | ||
Comment 10•14 years ago
|
||
(In reply to comment #6)
> None of this gets us "off the hook" as far as this bug is concerned, though,
> as capitalizing ß to SS is certainly not going away. Even if we have a font
> that supports U+1E9E, we'd still need to capitalize as SS by default, as
> that's the most commonly-accepted practice at least for
> "text-transform:uppercase".
FWIW, IE 9 (on Win 7) uses U+1E9E (capital Eszett) if there is a font having this letter available. Apparently, that's what IE 8 does as well, at least on Win 7 where such fonts exist.
The letter is used for both text-transform: uppercase; as well as font-variant: small-caps;
The letter is rendered even if the font specified doesn't contain it on its own. The ẞ is taken from some other font in that case.
| Assignee | ||
Comment 11•14 years ago
|
||
(In reply to comment #10)
> FWIW, IE 9 (on Win 7) uses U+1E9E (capital Eszett) if there is a font having
> this letter available. Apparently, that's what IE 8 does as well, at least
> on Win 7 where such fonts exist.
> The letter is used for both text-transform: uppercase; as well as
> font-variant: small-caps;
>
> The letter is rendered even if the font specified doesn't contain it on its
> own. The ẞ is taken from some other font in that case.
I'd consider this a bug, and expect users to complain about it.
If the font being used _does_ contain ẞ, then it may be debatable whether ß should be uppercased as ẞ or SS (though I think SS is probably a better default choice). But falling back to a different font - possibly resulting in a visually jarring mismatch of typefaces - is surely a bad idea here.
Comment 12•8 years ago
|
||
> If the font being used _does_ contain ẞ, then it may be debatable whether ß should be uppercased as ẞ or SS
Good thing that the German orthography has resolved that question now by standardizing ẞ…
Attachment 278307 [details] is rendered as “X ẞ Y” in Chrome 63.
Comment 13•8 years ago
|
||
(In reply to Adolfo Jayme from comment #12)
> > If the font being used _does_ contain ẞ, then it may be debatable whether ß should be uppercased as ẞ or SS
>
> Good thing that the German orthography has resolved that question now by
> standardizing ẞ…
>
> Attachment 278307 [details] is rendered as “X ẞ Y” in Chrome 63.
Depends on the font you are using; if the font has a small cap ß then you might get ẞ or SS depending on what glyph the font has, if you have a font with no small cap glyph then both Firefox and Chrome still give you SS.
Updated•3 years ago
|
Severity: normal → S3
| Assignee | ||
Comment 15•29 days ago
|
||
Updated•29 days ago
|
Assignee: nobody → jfkthame
Status: NEW → ASSIGNED
Comment 16•27 days ago
|
||
Pushed by jkew@mozilla.com:
https://github.com/mozilla-firefox/firefox/commit/b2f8ccfb2c08
https://hg.mozilla.org/integration/autoland/rev/35e1d79a9625
Apply letter-spacing between the two component S glyphs when es-zet is uppercased to SS. r=layout-reviewers,dshin
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/60678 for changes under testing/web-platform/tests
Comment 18•27 days ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 27 days ago
status-firefox154:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 154 Branch
Upstream PR merged by moz-wptsync-bot
Updated•25 days ago
|
status-firefox152:
--- → wontfix
status-firefox153:
--- → wontfix
status-firefox-esr115:
--- → wontfix
status-firefox-esr140:
--- → wontfix
status-firefox-esr153:
--- → wontfix
Flags: in-testsuite+
| Assignee | ||
Updated•22 days ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•