Bug 393766 - Apply letter-spacing between the two component S glyphs when es-zet is uppercased to SS. r=layout-reviewers,dshin

(Also applies to presentation-form ligatures like U+FB03 that uppercases to three characters "FFI".)

Differential Revision: https://phabricator.services.mozilla.com/D306728