gfx/thebes/gfxTextRun.h
@@ -254,6 +254,8 @@ class gfxTextRun : public gfxShapedText {
     // Return the appUnitsPerDevUnit value to be used when measuring.
     // Only called if the hyphen width is requested.
     virtual uint32_t GetAppUnitsPerDevUnit() const = 0;
+
+    virtual nscoord LetterSpacing() const = 0;
   };
 
   struct MOZ_STACK_CLASS DrawParams {
@@ -349,7 +351,7 @@ class gfxTextRun : public gfxShapedText {
    * Computes the minimum advance width for a substring assuming line
    * breaking is allowed everywhere.
    */
-  gfxFloat GetMinAdvanceWidth(Range aRange) const;
+  gfxFloat GetMinAdvanceWidth(Range aRange, nscoord aLetterSpacing) const;
 
   /**
    * Clear all stored line breaks for the given range (both before and after),
@@ -773,7 +775,8 @@ class gfxTextRun : public gfxShapedText {
     mShapingState = aShapingState;
   }
 
-  int32_t GetAdvanceForGlyph(uint32_t aIndex) const {
+  nscoord GetAdvanceForGlyph(uint32_t aIndex,
+                             nscoord aLetterSpacing = 0) const {
     const CompressedGlyph& glyphData = mCharacterGlyphs[aIndex];
     if (glyphData.IsSimpleGlyph()) {
       return glyphData.GetSimpleAdvance();
@@ -783,9 +786,13 @@ class gfxTextRun : public gfxShapedText {
       return 0;
     }
     const DetailedGlyph* details = GetDetailedGlyphs(aIndex);
-    int32_t advance = 0;
-    for (uint32_t j = 0; j < glyphCount; ++j, ++details) {
+    nscoord advance = 0;
+    if (glyphData.ApplyLetterSpacingBetweenDetailedGlyphs()) {
+      advance += (glyphCount - 1) * aLetterSpacing;
+    }
+    while (glyphCount--) {
       advance += details->mAdvance;
+      ++details;
     }
     return advance;
   }
@@ -823,7 +830,7 @@ class gfxTextRun : public gfxShapedText {
   // **** general helpers ****
 
   // Get the total advance for a range of glyphs.
-  int32_t GetAdvanceForGlyphs(Range aRange) const;
+  int32_t GetAdvanceForGlyphs(Range aRange, nscoord aLetterSpacing) const;
 
   // Spacing for characters outside the range aSpacingStart/aSpacingEnd
   // is assumed to be zero; such characters are not passed to aProvider.
